sort,import_export db,duplicate

--- a/app/src/main/res/layout/activity_add_update_partial_gigapixel.xml
+++ b/app/src/main/res/layout/activity_add_update_partial_gigapixel.xml
@@ -137,7 +137,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+            <!--  Number of bracketed shots -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -160,23 +160,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-
-            <Switch
-                android:id="@+id/sw_continious_rotation"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/rounded_edittext"
-                android:paddingLeft="10dp"
-                android:text="Continuous Rotation"
-                android:textColor="@color/white"
-                android:textOff="No"
-                android:textOn="Yes"
-                android:textSize="20sp" />
-
-
+            <!--  Bracketing style -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -214,30 +198,11 @@
             </RelativeLayout>
 
 
-            <!--  Password Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp">
 
-                <EditText
-                    android:id="@+id/ed_after_delay_shot"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/rounded_edittext"
-                    android:hint="After shot delay(ms, -1 to 32000)"
-                    android:inputType="numberSigned"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:textColor="@color/white">
 
-                </EditText>
 
-            </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+            <!--  Startup delay -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -250,7 +215,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Startup delay(sec, 0 to 32000)"
+                    android:hint="Startup delay(sec, 0 to 64000)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
@@ -260,7 +225,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+            <!--  Focus delay -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -273,7 +238,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Focus delay(ms, 0 to 32000)"
+                    android:hint="Focus delay(ms, 0 to 64000)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
@@ -283,7 +248,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+            <!--  Before shot delay -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -306,7 +271,77 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <!--  After shot delay -->
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp">
 
+                <EditText
+                    android:id="@+id/ed_after_delay_shot"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rounded_edittext"
+                    android:hint="After shot delay(ms, -1 to 32000)"
+                    android:inputType="numberSigned"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white">
+
+                </EditText>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <!--  Speed -->
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp">
+
+                <EditText
+                    android:id="@+id/ed_speed"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rounded_edittext"
+                    android:hint="Speed(rpm, 1 to 64000)"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white">
+
+                </EditText>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <!--  Acceleration -->
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp">
+
+                <EditText
+                    android:id="@+id/ed_acceleration"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rounded_edittext"
+                    android:hint="Acceleration(100 to 10000)"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/white">
+
+                </EditText>
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <!--  Direction -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -342,76 +377,63 @@
                     android:src="@drawable/spinner_arrow" />
             </RelativeLayout>
 
-            <!--  Password Label -->
-            <android.support.design.widget.TextInputLayout
+
+            <!--  Continuous Rotation -->
+            <Switch
+                android:id="@+id/sw_continious_rotation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="30dp"
+                android:background="@drawable/rounded_edittext"
+                android:paddingLeft="10dp"
+                android:text="Continuous Rotation"
+                android:textColor="@color/white"
+                android:textOff="No"
+                android:textOn="Yes"
+                android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/ed_speed"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/rounded_edittext"
-                    android:hint="Speed(rpm, 0 to 30)"
-                    android:inputType="number"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:textColor="@color/white">
-
-                </EditText>
-
-            </android.support.design.widget.TextInputLayout>
-
-            <!--  Password Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
+            <!-- 15. Continuous Rotation Shutter Release [Dropdown list] -->
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="20sp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:text="Continuous Rotation Shutter Release"/>
 
-                <EditText
-                    android:id="@+id/ed_acceleration"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/rounded_edittext"
-                    android:hint="Acceleration(100 to 4000)"
-                    android:inputType="number"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:textColor="@color/white">
-
-                </EditText>
-
-            </android.support.design.widget.TextInputLayout>
-
-            <!--  Password Label -->
-            <android.support.design.widget.TextInputLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp">
+                android:background="@drawable/rounded_edittext">
 
-                <EditText
-                    android:id="@+id/ed_max_frame_rate"
+                <Spinner
+                    android:id="@+id/sp_continuos_rotation_shutter_release"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/rounded_edittext"
-                    android:hint="Max Frame Rate(fps, 0 to 20)"
-                    android:inputType="number"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:textColor="@color/white">
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@null"
+                    android:popupBackground="@color/colorPrimary"
+                    android:textSize="25sp" />
 
-                </EditText>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:padding="5dp"
+                    android:src="@drawable/spinner_arrow" />
+            </RelativeLayout>
 
-            </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+
+
+            <!--  16. Number of Panoramas -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -424,7 +446,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Number of panoramas(1 to 32000)"
+                    android:hint="Number of panoramas(1 to 64000)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
@@ -434,7 +456,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+            <!--  17. Delay Between Panoramas -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -447,7 +469,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Delay between panoramas(sec, 0 to 32000)"
+                    android:hint="Delay between panoramas(sec, 0 to 64000)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
@@ -458,7 +480,24 @@
             </android.support.design.widget.TextInputLayout>
 
 
-            <!--  Password Label -->
+            <!-- 18. Return to Start [Yes/No, default=No] -->
+            <Switch
+                android:id="@+id/sw_return_to_start"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/rounded_edittext"
+                android:paddingLeft="10dp"
+                android:text="Return to Start"
+                android:textColor="@color/white"
+                android:textOff="No"
+                android:textOn="Yes"
+                android:textSize="20sp" />
+
+
+            <!--  19. Shutter Signal Length (ms -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -471,7 +510,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Shutter signal length(ms, 100 to 500)"
+                    android:hint="Shutter signal length(ms, 100 to 1000)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
@@ -480,7 +519,7 @@
                 </EditText>
 
             </android.support.design.widget.TextInputLayout>
-            <!--  Password Label -->
+            <!--  20. Focus Signal Length (ms)  -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -493,7 +532,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Focus signal length(ms, 100 to 500)"
+                    android:hint="Focus signal length(ms, 100 to 1000)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
@@ -503,7 +542,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-
+            <!--21. Camera WakeUp-->
             <Switch
                 android:id="@+id/sw_camera_wakeup"
                 android:layout_width="match_parent"
@@ -519,7 +558,7 @@
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
-            <!--  Password Label -->
+            <!--  22. WakeUp Signal Length (ms) -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -541,7 +580,7 @@
                 </EditText>
 
             </android.support.design.widget.TextInputLayout>
-            <!--  Password Label -->
+            <!--  23. WakeUp Delay  -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -564,7 +603,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--  Password Label -->
+            <!--  Max Frame Rate -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -573,11 +612,11 @@
                 android:layout_marginTop="20dp">
 
                 <EditText
-                    android:id="@+id/ed_speed_divider"
+                    android:id="@+id/ed_max_frame_rate"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Speed divider(1 to 32000)"
+                    android:hint="Max Frame Rate(fps, 0 to 20)"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="10dp"
