--- a/app/src/main/res/drawable/btn_shoot_selector.xml
+++ b/app/src/main/res/drawable/btn_shoot_selector.xml
@@ -3,10 +3,13 @@
     <item android:state_pressed="false">
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="oval">
+            android:shape="rectangle">
 
             <solid
-                android:color="@android:color/holo_green_light"/>
+                android:color="@android:color/holo_green_dark"/>
+
+            <corners
+                android:radius="10dp" />
 
             <size
                 android:width="30dp"
@@ -16,7 +19,7 @@
     <item android:state_pressed="true">
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="oval">
+            android:shape="rectangle">
 
             <solid
                 android:color="@android:color/holo_red_dark"/>
