--- a/app/src/main/res/layout/activity_shooting_profile.xml
+++ b/app/src/main/res/layout/activity_shooting_profile.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Single Row 360"
+                android:text="Single Row"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
         </LinearLayout>
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Multi Row 360"
+                android:text="Multi Row"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
         </LinearLayout>
@@ -64,6 +64,7 @@
             android:layout_margin="20dp"
             android:background="@drawable/btn_partial"
             android:gravity="center"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <ImageView
