--- a/app/src/main/res/layout/list_profile.xml
+++ b/app/src/main/res/layout/list_profile.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
     android:background="@color/colorPrimary"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="15dp"
+    android:paddingTop="15dp">
 
     <TextView
         android:id="@+id/tv_profile_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="7"
         android:layout_marginLeft="5dp"
+        android:layout_weight="6"
         android:text="Camera profile 1"
         android:textColor="@color/white"
         android:textSize="25sp" />
@@ -21,18 +21,26 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:gravity="center"
         android:layout_gravity="center_vertical"
+        android:layout_weight="4"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/btn_edit"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="20dp"
             android:layout_gravity="center"
+            android:layout_marginRight="10dp"
             android:src="@drawable/icon_edit" />
+
+        <ImageView
+            android:id="@+id/btn_duplicate"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/icon_duplicate_2" />
 
         <ImageView
             android:id="@+id/btn_delete"
