--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,7 +49,8 @@
 
     <color name="circle_ash">#383a3d</color>
 
-
+    <color name="blue_initializze">#0489B4</color>
+    <color name="blue_initializze_2">#FF083C4D</color>
 
 
 </resources>
